--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
