--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase-admin": "^12.0.0",
     "next": "14.1.1",
     "react": "^18",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23"
