--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
-    "next": "14.1.1",
+    "next": "^12.0.7",
     "react": "^18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^18",
