--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
-    "next": "14.1.1",
-    "react": "^18",
+    "next": "^14.1.1",
+    "react": "^18.2.0",
     "react-currency-formatter": "^1.1.0",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1",
+    "eslint-config-next": "^12.0.7",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
