--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
+    "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^2.2.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
     "next": "^14.1.1",
     "react": "^18.2.0",
-    "react-currency-formatter": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.3",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23"
   },
