--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.3",
+    "react-player": "^2.15.1",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23"
   },
