--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
     "next": "^14.1.1",
+    "next-auth": "^4.24.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.3",
     "react-player": "^2.15.1",
     "react-redux": "^9.1.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router": "^6.22.2",
+    "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.18",
