--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ GITHUB_SECRET=be8957a009a46b4c2a6228c2fd03b76c3340d646
 FACEBOOK_ID=781286374051647
 FACEBOOK_SECRET=6848397182031c091d2f003bad75b911
 
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://full-stack-amazon-rho.vercel.app/
 
-HOST=http://localhost:3000
+HOST=https://full-stack-amazon-rho.vercel.app/
