--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^1.0.6",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/react-paypal-js": "^8.1.4",
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/stripe-js": "^3.0.8",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "axios": "^1.6.7",
+    "express": "^4.18.3",
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
     "next": "^14.1.1",
@@ -24,13 +29,16 @@
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.22.2",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "stripe": "^14.20.0"
   },
   "devDependencies": {
+    "@types/react": "18.2.64",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.1",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.4.2"
   }
 }
