--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 GOOGLE_ID=770646250882-si805otkq2hlgp18eb3btutod2jlv58p.apps.googleusercontent.com
 GOOGLE_SECRET=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
 
-NEXTAUTH_URL=https://full-stack-amazon-tau.vercel.app/
+NEXTAUTH_URL=https://full-stack-amazon-eta.vercel.app/
 
 GITHUB_ID=1782a3e4463134415316
 GITHUB_SECRET=be8957a009a46b4c2a6228c2fd03b76c3340d646
@@ -10,4 +10,4 @@ GITHUB_SECRET=be8957a009a46b4c2a6228c2fd03b76c3340d646
 FACEBOOK_ID=781286374051647
 FACEBOOK_SECRET=6848397182031c091d2f003bad75b911
 
-HOST=https://full-stack-amazon-tau.vercel.app/
+HOST=https://full-stack-amazon-eta.vercel.app/
