Updated .env file
Updated .env file

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 GOOGLE_ID=770646250882-si805otkq2hlgp18eb3btutod2jlv58p.apps.googleusercontent.com
 GOOGLE_SECRET=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
-NEXTAUTH_URL=https://full-stack-amazon-eta.vercel.app
+NEXTAUTH_URL=https://full-stack-amazon-rouge.vercel.app
 GITHUB_ID=1782a3e4463134415316
 GITHUB_SECRET=be8957a009a46b4c2a6228c2fd03b76c3340d646
 FACEBOOK_ID=781286374051647
 FACEBOOK_SECRET=6848397182031c091d2f003bad75b911
-HOST=https://full-stack-amazon-eta.vercel.app
+HOST=https://full-stack-amazon-rouge.vercel.app
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAFc5IfpUx_9F_cKUAof9V5gm8_DrNVwKM
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=challenge-87aa5.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=challenge-87aa5
